<resources>
    <string name="app_name">网格管理系统</string>
    <string name="login_title_desction">THE GRID MANAGEMENT SYSTEM</string>
    <string name="login_please_username">请输入您的用户名</string>
    <string name="login_please_password">请输入您的密码</string>
    <string name="main_merchant_order">商家订单</string>
    <string name="main_customlist_item_order_text">订单号：</string>
    <string name="comprehensive_sequencing">综合排序</string>
    <string name="Consumption_amount">消费金额</string>
    <string name="member_list_two_date_str">日期</string>
    <string name="integral_credits_exchange_str">积分兑换</string>
    <string name="integral_credits_exchange_input_str">请输入兑换码查询</string>
    <string name="integral_credits_exchange_select_str">查询</string>
    <string name="integral_credits_exchange_success_str">恭喜兑换成功</string>
</resources>
