<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/forty"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_title_desction"
            android:textColor="@color/white"
            android:text="@string/login_title_desction"
            android:textSize="@dimen/twenty"
            android:gravity="center"
            />

    </LinearLayout>
<!--登陆的布局-->
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:background="@color/white"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">
        <!--登陆的布局  用户名-->
        <LinearLayout
            android:id="@+id/login_please_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/ten">
            <ImageView
                android:id="@+id/login_please_username_icon"
                android:layout_width="@dimen/fifteen"
                android:layout_height="@dimen/fifteen"
                android:layout_gravity="center_vertical"
                android:src="@drawable/username"/>
            <EditText
                android:id="@+id/login_please_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="@dimen/fifteen"
                android:hint="@string/login_please_username"
                />

        </LinearLayout>
        <!--登陆的布局  密码的布局-->
        <LinearLayout
            android:id="@+id/login_please_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/ten">
            <ImageView
                android:id="@+id/login_please_password_icon"
                android:layout_width="@dimen/fifteen"
                android:layout_height="@dimen/fifteen"
                android:layout_gravity="center_vertical"
                android:src="@drawable/password"/>
            <EditText
                android:id="@+id/login_please_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/fifteen"
                android:hint="@string/login_please_password"
                />

        </LinearLayout>

        <Button
            android:id="@+id/login_please_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_btn"
            android:layout_margin="@dimen/fifteen"/>
    </LinearLayout>

</RelativeLayout>
